--- a/styles/main.css
+++ b/styles/main.css
@@ -18,10 +18,13 @@ aside {
 	border-right: 1px solid black;
 	font-family: "Lucida Grande";
 	font-size: 12px;
+	display: -webkit-box;
+	-webkit-box-orient: vertical;
 }
 
 #flags {
-	padding: 20px 10px;
+	-webkit-box-flex: 1;
+	overflow: auto;
 }
 
 #usersearch {
@@ -29,10 +32,7 @@ aside {
 }
 
 #viewpreferences {
-	position: absolute;
-	left: 0;
-	right: 0;
-	bottom: 0;
+	position: relative;
 	border-top: 1px solid rgba(255,255,255,0.2);
 	background: rgb(202, 219, 229);
 }
@@ -93,4 +93,27 @@ aside {
 #mapcontainer img {
 	width: 100%;
 	height: 100%;
+}
+
+#toolbar {
+	height: 30px;
+	/*background: -webkit-linear-gradient(rgb(212, 154, 37), rgb(212, 154, 37));*/
+	background: rgb(29, 53, 67);
+	box-shadow: 0px 2px 4px rgba(0,0,0,0.4);
+	margin-bottom: 20px;
+}
+
+#toolbar button {
+	border: none;
+	background: transparent;
+	margin: 0;
+	padding: 0;
+	height: 100%;
+	vertical-align: top;
+	color: white;
+}
+
+#toolbar button.rightside {
+	float: right;
+	margin-left: 10px;
 }
