--- a/styles/main.css
+++ b/styles/main.css
@@ -109,6 +109,8 @@ aside {
 	background: rgb(29, 53, 67);
 	box-shadow: 0px 2px 4px rgba(0,0,0,0.4);
 	margin-bottom: 20px;
+	position: relative;
+	padding-right: 30px;
 }
 
 #toolbar button {
@@ -119,9 +121,66 @@ aside {
 	height: 100%;
 	vertical-align: top;
 	color: white;
+	-webkit-transition: opacity 0.5s ease-in-out, left 0.7s ease-in-out;
 }
 
 #toolbar button.rightside {
-	float: right;
 	margin-left: 10px;
+}
+
+#toolbar .group {
+	position: absolute;
+	right: 10px;
+	top: 0;
+	bottom: 0;
+	display: -webkit-box;
+}
+
+#toolbar.searchenabled button:not(#searchbutton) {
+	opacity: 0;
+}
+
+#searchbutton {
+	margin-left: 0;
+	position: relative;
+	left: 0px;
+}
+
+#searchbutton img {
+	-webkit-transition: -webkit-transform 1s ease;
+	-moz-transition: -moz-transform 1s ease;
+}
+
+#toolbar.searchenabled #searchbutton {
+	left: -284px;
+}
+
+#toolbar.searchenabled #searchbutton img {
+	-webkit-transform: rotate(90deg);
+	-moz-transform: rotate(90deg);
+}
+
+#searchflags {
+	position: absolute;
+	left: 20px;
+	right: 200px;
+	top: 0;
+	bottom: 0;
+	-webkit-appearance: none;
+	border: none;
+	background: transparent;
+	color: white;
+	opacity: 0;
+	-webkit-transition: opacity 0.5s ease-in-out;
+	-webkit-transition-delay: 0.7s;
+}
+
+#toolbar.searchenabled #searchflags {
+	opacity: 1;
+	right: 10px;
+	outline: none;
+}
+
+#searchflags::-webkit-input-placeholder {
+	color: rgba(255, 255, 255, 0.6);
 }
