--- a/styles/main.css
+++ b/styles/main.css
@@ -24,7 +24,15 @@ aside {
 
 #flags {
 	-webkit-box-flex: 1;
+	overflow: hidden;
+	display: -webkit-box;
+	-webkit-box-orient: vertical;
+}
+
+#flags div.container {
+	-webkit-box-flex: 1;
 	overflow: auto;
+	padding: 0 10px;
 }
 
 #usersearch {
@@ -61,7 +69,7 @@ aside {
 #choosemap {
 	list-style: none;
 	background: rgba(69, 94, 109, 0.15);
-	padding: 0 10px;
+	padding: 0;
 	overflow: hidden;
 	display: -webkit-box;
 	margin-bottom: 20px;
@@ -108,9 +116,8 @@ aside {
 	/*background: -webkit-linear-gradient(rgb(212, 154, 37), rgb(212, 154, 37));*/
 	background: rgb(29, 53, 67);
 	box-shadow: 0px 2px 4px rgba(0,0,0,0.4);
-	margin-bottom: 20px;
 	position: relative;
-	padding-right: 30px;
+	padding: 0 10px;
 }
 
 #toolbar button {
