--- a/styles/main.css
+++ b/styles/main.css
@@ -62,40 +62,6 @@ aside {
 	z-index: -2;
 }
 
-#viewpreferences fieldset {
-	border: none;
-}
-
-#viewpreferences legend {
-	display: none;
-}
-
-#choosemap {
-	list-style: none;
-	background: rgba(69, 94, 109, 0.15);
-	padding: 0;
-	overflow: hidden;
-	display: -webkit-box;
-	display: -moz-box;
-	margin-bottom: 20px;
-	width: 100%;
-}
-
-#choosemap li {
-	-webkit-box-flex: 1;
-	-moz-box-flex: 1;
-	text-align: center;
-	line-height: 3;
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	user-select: none;
-	cursor: default;
-}
-
-#choosemap li.active {
-	background: rgba(0, 0, 0, 0.2);
-}
-
 #mapcontainer {
 	position: absolute;
 	top: 0;
@@ -245,6 +211,7 @@ aside {
 }
 
 #visibilities {
+	padding: 10px;
 	-webkit-column-count: 2;
 }
 
