Erstes, grobes Design für die Karte
Polygon wurde eingebunden, mehrere Layer mit Farbe und Effekten versehen.

--- a/styles/main.css
+++ b/styles/main.css
@@ -76,8 +76,9 @@ aside {
 	left: 320px;
 	right: 0;
 	bottom: 0;
-	background: #83ab39;
-	overflow: hidden
+	background: #e9e6df url("../images/textur.png") repeat;
+	overflow: hidden;
+	-webkit-transform: translateZ(0);
 }
 
 #mapcontainer svg {
@@ -250,7 +251,7 @@ aside {
 }
 
 #flags *:not(:hover) {
-	opacity: 0.2;
+	opacity: 0.7;
 }
 
 #flags .hover {
