--- a/styles/main.css
+++ b/styles/main.css
@@ -250,10 +250,10 @@ aside {
 	padding: 5px;
 }
 
-#flags *:not(:hover) {
+#flags >:not(:hover) {
 	opacity: 0.7;
 }
 
-#flags .hover, #flags :active {
+#flags >.hover, #flags >:active {
 	opacity: 1;
 }
