Verbesserte Usability durch Tooltips + Cursor (#59)

--- a/styles/main.css
+++ b/styles/main.css
@@ -273,7 +273,7 @@ aside {
 	padding: 5px;
 }
 
-#flags > *, #scaler, #map > g {
+#flags > *, #scaler {
 	cursor: default;
 	cursor: -webkit-grab;
 	cursor: -moz-grab;
