Unterstützung von Distanzen bei Routen
Bei der Erstellung von Routen wird die Distanz errechnet, außerdem wird diese auch angezeigt.

--- a/styles/main.css
+++ b/styles/main.css
@@ -57,6 +57,10 @@ aside {
 	-webkit-transition: -webkit-filter 1s ease-in-out;
 }
 
+#flaglist li::after {
+	content: attr(data-route-distance);
+}
+
 #flaglist div.container li.hover, #flaglist div.container li:hover {
 	background: violet;
 }
