--- a/styles/map.css
+++ b/styles/map.css
@@ -16,7 +16,23 @@
 }
 
 #motorways {
-	stroke-width: 1.5;
+	stroke-width: 2.5;
+}
+
+#primaries {
+	stroke-width: 1.3;
+}
+
+#secondaries {
+	stroke-width: 0.8;
+}
+
+#tertiaries {
+	stroke-width: 0.3;
+}
+
+#canals {
+	stroke-width: 0.6;
 }
 
 #flags path {
